Replace the author info.

--- a/apache-tomcat-8.5.29/webapps/signon/css/style.css
+++ b/apache-tomcat-8.5.29/webapps/signon/css/style.css
@@ -1,6 +1,6 @@
-/*--A Design by 小贝壳网站模板 
+/*--A Design by 卓教授 
 Author: W3layout
-Author URL: http://www.smallseashell.com
+Author URL: http://0lddriv3r.github.io
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
