Change the design info for all.

--- a/apache-tomcat-8.5.29/webapps/sign/css/style.css
+++ b/apache-tomcat-8.5.29/webapps/sign/css/style.css
@@ -1,4 +1,4 @@
-/*--A Design by 卓教授 
+/*--A Design by 教授 
 Author: W3layout
 Author URL: http://0lddriv3r.github.io
 License: Creative Commons Attribution 3.0 Unported
